// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConnectedResetPasswordPage renders correctly 1`] = `
<ResetPasswordPage
  history={
    Object {
      "push": [Function],
    }
  }
  match={
    Object {
      "params": Object {
        "token": "some token",
      },
    }
  }
  resetPassword={[Function]}
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
  validateToken={[Function]}
/>
`;

exports[`UnconnectedResetPasswordPage renders correctly after \`validateToken\` finishes successfully 1`] = `
<CenterElemsContainer>
  <ResetPasswordForm
    submit={[Function]}
    token="some token"
  />
</CenterElemsContainer>
`;

exports[`UnconnectedResetPasswordPage renders correctly after \`validateToken\` finishes with failure 1`] = `
<CenterElemsContainer>
  <Message>
    Invalid Token
  </Message>
</CenterElemsContainer>
`;

exports[`UnconnectedResetPasswordPage renders correctly before \`validateToken\` finishes 1`] = `
<CenterElemsContainer>
  <Message>
    Loading
  </Message>
</CenterElemsContainer>
`;
